[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["Dmitry Klionsky <dm.klionsky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.1.27"
image = "0.13.0"
crossbeam = "0.2.8"
num_cpus = "1.12.0"
